Changelog
=========

4.21-dev - (unreleased)
-----------------------
 * Bug fix: fixed notification.py so PO files can be generated
   [prospchr #5159]
 * Bug fix: added migration script to fix some figuretype for some figures 
   [tiberich #5082]
 * Bug fix: fixed floating issues with related portlets [ichimdav #5157]
 * Change: geotags migration script is now transaction aware
   [ghicaale refs #4778]
 * Bug fix: added body text in cft_listing_view
   [tiberich #5111]
 * Upgrade step: add an External Method called fix_categories_maps with:
   module name -  Products.EEAContentTypes.migration_fixes 
   function name - fix_categories_maps
   Execute it [tiberich #5082] 

4.20 - (2012-04-27)
-------------------
 * Bug fix: added view replacement for unicodeInTest
   [tiberich #5106]

4.19 - (2012-04-26)
-------------------
 * Upgrade step: go to portal_setup > upgrades > Products.EEAContentTypes:default
   and run the Enabled CloudVideo contenttype from EEAContentTypes step
 * Bug fix: do not show an empty portlet when there are no videos related.
   [demarant]
 * Bug fix: added override for wysiwyg template which always shows richtext editor
   [tiberich #5055]

4.18 - (2012-03-30)
-------------------
 * Upgrade step: import profile "Upgrade profile for EEAContentTypes 4.17" >
   Skins tool [tiberich #4982];
   Set default location for ExternalDataSpec, in portal_relations, to 
   python:object.restrictedTraverse("/www/SITE/data-and-maps/data/external-datasets-catalog")
   Add a new portlet in the Faceted criteria tab, with type "Plone Portlet" and
       title: Create new
       path: here/portlet_addcontent/macros/portlet
 * Bug fix: Fixed eea_keywords macros
   [voineali #5021]
 * Bug fix: fixed unicode error when object id is normalized
   [ghicaale #4998]
 * Feature: a portlet that can be used in the eea.relations portlet to add
   new content in a simple popup form
   [tiberich #4982]